Protegendo alguns métodos públicos, capturando exception da data, que estava causando crash e adcionando toast de não implementado no botão de capturar localização.

--- a/app/src/main/res/layout/fragment_carimbo_projeto.xml
+++ b/app/src/main/res/layout/fragment_carimbo_projeto.xml
@@ -34,7 +34,7 @@
                 android:layout_height="match_parent">
 
                 <Button
-                    android:id="@+id/buttonGetLocation2"
+                    android:id="@+id/buttonGetLocation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
