--- a/app/src/main/res/layout/fragment_ensaio.xml
+++ b/app/src/main/res/layout/fragment_ensaio.xml
@@ -124,7 +124,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
-                android:text="Substituir número de amostra"
+                android:text="Remover isto aqui plss"
                 android:textAlignment="textStart"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
