Alterações de layout e adiçao do parâmetro nível d'água

--- a/app/src/main/res/layout/fragment_ensaio.xml
+++ b/app/src/main/res/layout/fragment_ensaio.xml
@@ -41,7 +41,26 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Profundidade"
-                    android:inputType="numberDecimal" />
+                    android:inputType="numberSigned|number|numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputLayoutNivelDAgua"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="40dp"
+                app:layout_constraintEnd_toEndOf="@+id/textInputLayoutProfundiade"
+                app:layout_constraintStart_toStartOf="@+id/textInputLayoutProfundiade"
+                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutProfundiade"
+                app:startIconDrawable="@drawable/ic_edit">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/textInputEditTextNivelDAgua"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Nível de Água" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <ImageButton
@@ -141,7 +160,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/textInputLayoutProfundiade"
                 app:layout_constraintHorizontal_bias="0.068"
                 app:layout_constraintStart_toStartOf="@+id/textInputLayoutProfundiade"
-                app:layout_constraintTop_toBottomOf="@+id/textInputEditTextNivelDAgua" />
+                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNivelDAgua" />
 
             <TextView
                 android:id="@+id/textPenetracao"
@@ -241,24 +260,6 @@
                 app:layout_constraintStart_toEndOf="@+id/editTextPenetracao2"
                 app:layout_constraintTop_toTopOf="@+id/editTextPenetracao1"
                 app:layout_constraintVertical_bias="0.3" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputEditTextNivelDAgua"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="40dp"
-                app:layout_constraintEnd_toEndOf="@+id/textInputLayoutProfundiade"
-                app:layout_constraintStart_toStartOf="@+id/textInputLayoutProfundiade"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutProfundiade"
-                app:startIconDrawable="@drawable/ic_edit">>
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Nível de Água" />
-            </com.google.android.material.textfield.TextInputLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
