--- a/app/src/main/res/layout/fragment_ensaio.xml
+++ b/app/src/main/res/layout/fragment_ensaio.xml
@@ -262,6 +262,16 @@
                 app:layout_constraintTop_toTopOf="@+id/editTextPenetracao1"
                 app:layout_constraintVertical_bias="0.3" />
 
+            <Button
+                android:id="@+id/buttonFinnishEnsaio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:text="@string/btn_finish_ensaio"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 
