alterado imagemprofile modo claro e escuro (tint)

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -37,7 +37,7 @@
         <item name="materialButtonStyle">@style/ButtonPadrao_light</item>
         <item name="imageButtonStyle">@style/ImageButton_light</item>
         <item name="editTextStyle">@style/Edit_Text_light</item>
-        <item name="iconTint">@color/color_primary_light</item>
+        <item name="tint">@color/color_primary_light</item>
 
 
 
