--- a/app/src/main/res/layout/adapter_home_projetos.xml
+++ b/app/src/main/res/layout/adapter_home_projetos.xml
@@ -15,8 +15,8 @@
 
         <ImageView
             android:id="@+id/imageLogoProject"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="90dp"
+            android:layout_height="110dp"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
@@ -28,9 +28,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="05dp"
+            android:layout_marginTop="10dp"
             android:layout_toEndOf="@id/imageLogoProject"
-            android:text="Nome do projeto" />
+            android:text="Nome do projeto"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/textTipoEnsaio"
@@ -38,11 +39,12 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/textNameProjeto"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="05dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:layout_toEndOf="@id/imageLogoProject"
             android:text="Tipo de Ensaio"
-            android:textColor="#FF0909" />
+            android:textColor="#4690C7"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/textDescricaoProjeto"
@@ -51,18 +53,21 @@
             android:layout_below="@id/textTipoEnsaio"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="-5dp"
-            android:layout_toEndOf="@id/imageLogoProject"
-            android:text="POR FAVOR REMOVA ESSE TEXT VIEW NÂO SERÁ USADO MAIS" />
+            android:layout_toEndOf="@id/imageLogoProject" />
 
         <TextView
             android:id="@+id/textDateProjeto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/textDescricaoProjeto"
+            android:layout_below="@id/textTipoEnsaio"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="05dp"
+
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="10dp"
             android:layout_toEndOf="@id/imageLogoProject"
-            android:text="Inicio do Projeto: xx/xx/xxxx" />
+
+            android:text="Inicio do Projeto: xx/xx/xxxx"
+            android:textSize="16sp" />
 
         <CheckBox
             android:id="@+id/checkBox"
