--- a/app/src/main/res/values/style_light.xml
+++ b/app/src/main/res/values/style_light.xml
@@ -57,5 +57,9 @@
     <item name="android:textColorPrimary">@color/white</item>
     </style>
 
-    
+<style name="CardViewLight" parent="Widget.Material3.CardView.Outlined">
+    <item name="cardBackgroundColor">@color/fundo_light</item>
+
+
+</style>
 </resources>
