alterado icon contato

--- a/app/src/main/res/layout/adapter_carimbo_projeto.xml
+++ b/app/src/main/res/layout/adapter_carimbo_projeto.xml
@@ -27,6 +27,7 @@
                 android:id="@+id/textInputEditTextNameProjeto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/hint"
                 android:inputType="text" />
 
         </com.google.android.material.textfield.TextInputLayout>
