alterado nome de novo furo do menu spt

--- a/app/src/main/res/menu/menu_spt.xml
+++ b/app/src/main/res/menu/menu_spt.xml
@@ -3,7 +3,7 @@
     <item
     android:id="@+id/addfuro"
     android:orderInCategory="100"
-    android:title="novo furo"
+    android:title="Novo Furo"
     android:icon="@drawable/ic_add"
 
         />
@@ -11,7 +11,7 @@
     <item
         android:id="@+id/deletefuro"
         android:orderInCategory="100"
-        android:title="Apagar furo"
+        android:title="Apagar Furo"
         android:icon="@android:drawable/ic_menu_delete"
         />
     <item
