alterado color acent do checkbox

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -9,11 +9,8 @@
         <item name="cardViewStyle">@style/CardViewDark</item>
 
 
-
-
-
         <!-- Estilos padrão. -->
-        <item name="colorAccent">@color/accent</item>
+        <item name="colorAccent">@color/color_primary_dark</item>
         <item name="backgroundColor">@color/fundo_dark</item>
         <item name="toolbarStyle">@style/Tollbar_dark</item>
         <item name="materialButtonStyle">@style/ButtonPadrao_Dark</item>
