--- a/app/src/main/res/values/style_light.xml
+++ b/app/src/main/res/values/style_light.xml
@@ -47,9 +47,7 @@
         <item name="endIconMode">clear_text</item>
         <item name="android:textSize">14dp</item>
 
-    </style>
-    <style name="Checkbox_light" parent="Widget.AppCompat.CompoundButton.CheckBox">
-        <item name="buttonTint">@color/color_primary_dark</item>
+
     </style>
 
     <style name="Tollbar_light" parent="Widget.MaterialComponents.Toolbar">
@@ -58,7 +56,7 @@
     </style>
 
 <style name="CardViewLight" parent="Widget.Material3.CardView.Outlined">
-    <item name="cardBackgroundColor">@color/fundo_light</item>
+    <item name="cardBackgroundColor">#FFFFFF</item>
 
 </style>
 </resources>
