--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -11,12 +11,13 @@
 
         <!-- Estilos padrão. -->
         <item name="colorAccent">@color/color_primary_dark</item>
+        <item name="textInputStyle">@style/ImputDark</item>
         <item name="backgroundColor">@color/fundo_dark</item>
         <item name="toolbarStyle">@style/Tollbar_dark</item>
         <item name="materialButtonStyle">@style/ButtonPadrao_Dark</item>
         <item name="imageButtonStyle">@style/ImageButton_Dark</item>
         <item name="editTextStyle">@style/Edit_Text_dark</item>
-        <item name="tint">@color/fundo_light</item>
+        <item name="tint">@color/white</item>
 
         <item name="android:textViewStyle">@style/TextView_Dark</item>
 
