--- a/app/src/main/res/values/style_dark.xml
+++ b/app/src/main/res/values/style_dark.xml
@@ -46,4 +46,15 @@
     <style name="CardViewDark" parent="Widget.Material3.CardView.Outlined">
         <item name="cardBackgroundColor">@color/fundo_dark</item>
     </style>
+
+    <style name="ImputDark" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:textColor">@color/fundo_light</item>
+    <item name="startIconTint">@color/color_primary_dark</item>
+    <item name="errorIconTint">@color/color_primary_dark</item>
+    <item name="startIconScaleType">centerInside</item>
+    <item name="helperTextTextColor">@color/color_primary_dark</item>
+    <item name="endIconMode">clear_text</item>
+    <item name="android:textSize">14dp</item>
+    </style>
 </resources>
