Melhorias na interface e finalizando ActionMode

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,9 +38,7 @@
         <item name="imageButtonStyle">@style/ImageButton_light</item>
         <item name="editTextStyle">@style/Edit_Text_light</item>
         <item name="iconTint">@color/color_primary_light</item>
-
-
-
+        <item name="windowActionModeOverlay">true</item>
 
 
 
