--- a/app/src/main/res/layout/acitivity_granulometria.xml
+++ b/app/src/main/res/layout/acitivity_granulometria.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+<include
+    layout="@layout/fragment_toolbar_granulometria"></include>
     <Button
         android:id="@+id/buttonNavigate2"
         android:layout_width="wrap_content"
