--- a/app/src/main/res/layout/adpter_indentificar_agregados.xml
+++ b/app/src/main/res/layout/adpter_indentificar_agregados.xml
@@ -4,38 +4,36 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp">
 
-        <TextView
-            android:id="@+id/textDadosAgregados"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayoutIndentificarAgregados"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/registration_substituir_dados_agregados"
-            android:textSize="16sp" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayoutDadosAgregados"
+            android:hint="substitua hint"
             app:errorEnabled="true"
             app:errorIconDrawable="@drawable/ic_erro"
             app:helperText="substitua observação"
             app:hintEnabled="true"
-            app:startIconDrawable="@drawable/ic_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="substitua hint">
+            app:startIconDrawable="@drawable/ic_furo">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textInputEditTextDadosAgregados"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="date|number|datetime|text|numberDecimal" />
-
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/textInputEditTextIndentificarAgregados"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number|numberDecimal" />
         </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
     </LinearLayout>
+
 
 </androidx.cardview.widget.CardView>
