--- a/app/src/main/res/layout/fragment_identificar_agregados.xml
+++ b/app/src/main/res/layout/fragment_identificar_agregados.xml
@@ -24,24 +24,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="16dp"
+                <TextView
+                    android:id="@+id/textRegistrarAgregados"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/registration_agregados"
+                    android:textAlignment="center"
+                    android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerIndentificarAgregados"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textRegistrarAgregados" />
+
                 <Button
-                    android:id="@+id/button6"
+                    android:id="@+id/buttonNext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
                     android:text="Continuar"
-                    app:layout_constraintEnd_toEndOf="@+id/recyclerView2"
-                    app:layout_constraintStart_toStartOf="@+id/recyclerView2"
-                    app:layout_constraintTop_toBottomOf="@+id/recyclerView2" />
+                    app:layout_constraintEnd_toEndOf="@+id/recyclerIndentificarAgregados"
+                    app:layout_constraintStart_toStartOf="@+id/recyclerIndentificarAgregados"
+                    app:layout_constraintTop_toBottomOf="@+id/recyclerIndentificarAgregados" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
