--- a/app/src/main/res/layout/fragment_peneiras_graudo.xml
+++ b/app/src/main/res/layout/fragment_peneiras_graudo.xml
@@ -27,7 +27,7 @@
                 android:layout_height="match_parent">
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/textPeneirasIntermediariasGraudo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -35,20 +35,20 @@
                     android:text="Intermediárias"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                    app:layout_constraintTop_toBottomOf="@+id/textSelecionePeneirasGraudo" />
 
                 <CheckBox
-                    android:id="@+id/checkBox9"
+                    android:id="@+id/checkboxN9_5mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:text="9,5 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/checkBox8"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox8"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox8" />
+                    app:layout_constraintEnd_toEndOf="@+id/checkboxN19mm"
+                    app:layout_constraintStart_toStartOf="@+id/checkboxN19mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxN19mm" />
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/textPeneirasNormaisGraudo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="40dp"
@@ -56,78 +56,78 @@
                     android:text="Normais"
                     android:textSize="20sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                    app:layout_constraintTop_toBottomOf="@+id/textSelecionePeneirasGraudo" />
 
                 <CheckBox
-                    android:id="@+id/checkBox13"
+                    android:id="@+id/checkboxN0_6mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="0,6 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/checkBox12"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox12"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox12" />
+                    app:layout_constraintEnd_toEndOf="@+id/checkboxN1_2mm"
+                    app:layout_constraintStart_toStartOf="@+id/checkboxN1_2mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxN1_2mm" />
 
                 <CheckBox
-                    android:id="@+id/checkBox11"
+                    android:id="@+id/checkboxN_24mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="2,4 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/checkBox10"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox10"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox10" />
+                    app:layout_constraintEnd_toEndOf="@+id/checkboxn4_8mm"
+                    app:layout_constraintStart_toStartOf="@+id/checkboxn4_8mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxn4_8mm" />
 
                 <CheckBox
-                    android:id="@+id/checkBox5"
+                    android:id="@+id/checkboxI50mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="50 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/checkBox4"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox4"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox4" />
+                    app:layout_constraintEnd_toEndOf="@+id/checkboxI64mm"
+                    app:layout_constraintStart_toStartOf="@+id/checkboxI64mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxI64mm" />
 
                 <CheckBox
-                    android:id="@+id/checkBox17"
+                    android:id="@+id/checkboxI6_3mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:text="6,3 mm"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox16"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox16" />
+                    app:layout_constraintStart_toStartOf="@+id/checkboxI1_25mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxI1_25mm" />
 
                 <CheckBox
-                    android:id="@+id/checkBox2"
+                    android:id="@+id/checkboxN76mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="76 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/textView4"
-                    app:layout_constraintStart_toStartOf="@+id/textView4"
-                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
+                    app:layout_constraintEnd_toEndOf="@+id/textPeneirasNormaisGraudo"
+                    app:layout_constraintStart_toStartOf="@+id/textPeneirasNormaisGraudo"
+                    app:layout_constraintTop_toBottomOf="@+id/textPeneirasNormaisGraudo" />
 
                 <CheckBox
-                    android:id="@+id/checkBox4"
+                    android:id="@+id/checkboxI64mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="64 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/textView5"
-                    app:layout_constraintStart_toStartOf="@+id/textView5"
-                    app:layout_constraintTop_toBottomOf="@+id/textView5" />
+                    app:layout_constraintEnd_toEndOf="@+id/textPeneirasIntermediariasGraudo"
+                    app:layout_constraintStart_toStartOf="@+id/textPeneirasIntermediariasGraudo"
+                    app:layout_constraintTop_toBottomOf="@+id/textPeneirasIntermediariasGraudo" />
 
                 <CheckBox
-                    android:id="@+id/checkBox16"
+                    android:id="@+id/checkboxI1_25mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:text="12,5 mm"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox7"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox7" />
+                    app:layout_constraintStart_toStartOf="@+id/checkboxI25mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxI25mm" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/textSelecionePeneirasGraudo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -138,86 +138,86 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <CheckBox
-                    android:id="@+id/checkBox8"
+                    android:id="@+id/checkboxN19mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="100dp"
                     android:text="19 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/checkBox3"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox3"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox3" />
+                    app:layout_constraintEnd_toEndOf="@+id/checkboxN38mm"
+                    app:layout_constraintStart_toStartOf="@+id/checkboxN38mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxN38mm" />
 
                 <CheckBox
-                    android:id="@+id/checkBox12"
+                    android:id="@+id/checkboxN1_2mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="1,2 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/checkBox11"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox11"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox11" />
+                    app:layout_constraintEnd_toEndOf="@+id/checkboxN_24mm"
+                    app:layout_constraintStart_toStartOf="@+id/checkboxN_24mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxN_24mm" />
 
                 <CheckBox
-                    android:id="@+id/checkBox15"
+                    android:id="@+id/checkboxN0_15mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="0,15 mm"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox14"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox14" />
+                    app:layout_constraintStart_toStartOf="@+id/checkboxN0_3mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxN0_3mm" />
 
                 <CheckBox
-                    android:id="@+id/checkBox7"
+                    android:id="@+id/checkboxI25mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="25 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/checkBox6"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox6"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox6" />
+                    app:layout_constraintEnd_toEndOf="@+id/checkboxI32mm"
+                    app:layout_constraintStart_toStartOf="@+id/checkboxI32mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxI32mm" />
 
                 <CheckBox
-                    android:id="@+id/checkBox14"
+                    android:id="@+id/checkboxN0_3mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="0,3 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/checkBox13"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox13"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox13" />
+                    app:layout_constraintEnd_toEndOf="@+id/checkboxN0_6mm"
+                    app:layout_constraintStart_toStartOf="@+id/checkboxN0_6mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxN0_6mm" />
 
                 <CheckBox
-                    android:id="@+id/checkBox10"
+                    android:id="@+id/checkboxn4_8mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:text="4,8 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/checkBox9"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox9"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox9" />
+                    app:layout_constraintEnd_toEndOf="@+id/checkboxN9_5mm"
+                    app:layout_constraintStart_toStartOf="@+id/checkboxN9_5mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxN9_5mm" />
 
                 <CheckBox
-                    android:id="@+id/checkBox6"
+                    android:id="@+id/checkboxI32mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="32 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/checkBox5"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox5"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox5" />
+                    app:layout_constraintEnd_toEndOf="@+id/checkboxI50mm"
+                    app:layout_constraintStart_toStartOf="@+id/checkboxI50mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxI50mm" />
 
                 <CheckBox
-                    android:id="@+id/checkBox3"
+                    android:id="@+id/checkboxN38mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="38 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/checkBox2"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox2"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
+                    app:layout_constraintEnd_toEndOf="@+id/checkboxN76mm"
+                    app:layout_constraintStart_toStartOf="@+id/checkboxN76mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxN76mm" />
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/buttonNext3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -226,7 +226,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox15" />
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxN0_15mm" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
 
