--- a/app/src/main/res/layout/fragment_peneiras_miudo.xml
+++ b/app/src/main/res/layout/fragment_peneiras_miudo.xml
@@ -25,37 +25,37 @@
                 android:layout_height="match_parent">
 
                 <CheckBox
-                    android:id="@+id/checkBox23"
+                    android:id="@+id/checkboxMiudo1_2mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="1,2 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/checkBox20"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox20"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox20" />
+                    app:layout_constraintEnd_toEndOf="@+id/checkboxMiudo2_4mm"
+                    app:layout_constraintStart_toStartOf="@+id/checkboxMiudo2_4mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxMiudo2_4mm" />
 
                 <CheckBox
-                    android:id="@+id/checkBox20"
+                    android:id="@+id/checkboxMiudo2_4mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="2,4 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/checkBox19"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox19"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox19" />
+                    app:layout_constraintEnd_toEndOf="@+id/checkboxMiudo4_8mm"
+                    app:layout_constraintStart_toStartOf="@+id/checkboxMiudo4_8mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxMiudo4_8mm" />
 
                 <CheckBox
-                    android:id="@+id/checkBox19"
+                    android:id="@+id/checkboxMiudo4_8mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="4,8 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/textView6"
-                    app:layout_constraintStart_toStartOf="@+id/textView6"
-                    app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                    app:layout_constraintEnd_toEndOf="@+id/textPeneirasNormaisMiudo"
+                    app:layout_constraintStart_toStartOf="@+id/textPeneirasNormaisMiudo"
+                    app:layout_constraintTop_toBottomOf="@+id/textPeneirasNormaisMiudo" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/textSelecionePeineirasMiudo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -66,7 +66,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/textPeneirasIntermediariaMiudo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -74,19 +74,19 @@
                     android:text="Intermediárias"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                    app:layout_constraintTop_toBottomOf="@+id/textSelecionePeineirasMiudo" />
 
                 <CheckBox
-                    android:id="@+id/checkBox21"
+                    android:id="@+id/checkboxMiudo0_15mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="0,15 mm"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox18"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox18" />
+                    app:layout_constraintStart_toStartOf="@+id/checkboxMiudo0_3mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxMiudo0_3mm" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/textPeneirasNormaisMiudo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="40dp"
@@ -94,27 +94,27 @@
                     android:text="Normais"
                     android:textSize="20sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                    app:layout_constraintTop_toBottomOf="@+id/textSelecionePeineirasMiudo" />
 
                 <CheckBox
-                    android:id="@+id/checkBox18"
+                    android:id="@+id/checkboxMiudo0_3mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="0,3 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/checkBox22"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox22"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox22" />
+                    app:layout_constraintEnd_toEndOf="@+id/checkboxMiudo0_6mm"
+                    app:layout_constraintStart_toStartOf="@+id/checkboxMiudo0_6mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxMiudo0_6mm" />
 
                 <CheckBox
-                    android:id="@+id/checkBox22"
+                    android:id="@+id/checkboxMiudo0_6mm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="0,6 mm"
-                    app:layout_constraintEnd_toEndOf="@+id/checkBox23"
-                    app:layout_constraintStart_toStartOf="@+id/checkBox23"
-                    app:layout_constraintTop_toBottomOf="@+id/checkBox23" />
+                    app:layout_constraintEnd_toEndOf="@+id/checkboxMiudo1_2mm"
+                    app:layout_constraintStart_toStartOf="@+id/checkboxMiudo1_2mm"
+                    app:layout_constraintTop_toBottomOf="@+id/checkboxMiudo1_2mm" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
 
