--- a/app/src/main/res/layout/adapter_furo.xml
+++ b/app/src/main/res/layout/adapter_furo.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="10dp"
+    android:layout_margin="5dp"
     app:cardCornerRadius="20dp"
     app:cardElevation="10dp">
 
