Ajeitando merge da #52 com a #47

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -18,7 +18,7 @@
         <item name="imageButtonStyle">@style/ImageButton_Dark</item>
         <item name="editTextStyle">@style/Edit_Text_dark</item>
         <item name="android:textViewStyle">@style/TextView_Dark</item>
-
+        <item name="windowActionModeOverlay">true</item>
 
 
 
