Adicionando autenticação com o Google

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,10 @@
 
     <include
         android:id="@+id/toolbarHomeInclude"
-        layout="@layout/fragment_toolbar_home" />
+        layout="@layout/fragment_toolbar_home"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
