--- a/app/src/main/res/layout/fragment_toolbar_home.xml
+++ b/app/src/main/res/layout/fragment_toolbar_home.xml
@@ -17,4 +17,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/toolbar_item_logout"
+        android:layout_width="30dp"
+        android:layout_height="31dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_exit_app" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
