organizado home, adcionado popup_menu.xml, alterado algumas cores do tema todo: concerta os 5 erros do home activity_home.xml

--- a/app/src/main/res/layout/adapter_home_projetos.xml
+++ b/app/src/main/res/layout/adapter_home_projetos.xml
@@ -43,7 +43,7 @@
             android:layout_marginBottom="20dp"
             android:layout_toEndOf="@id/imageLogoProject"
             android:text="Tipo de Ensaio"
-            android:textColor="#4690C7"
+            android:textColor="#FF3761"
             android:textSize="18sp" />
 
         <TextView
