--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,9 @@
 
     <include
         android:id="@+id/toolbarHomeInclude"
-        layout="@layout/fragment_toolbar_home" />
+        layout="@layout/fragment_toolbar_home"
+        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteY="-6dp" />
 
 
     <TextView
@@ -42,7 +44,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textFiltroEnsaio"
         app:layout_constraintTop_toBottomOf="@+id/textFiltroEnsaio" />
@@ -64,21 +65,23 @@
         android:id="@+id/imageFilterEnsaio"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/textFiltroEnsaio"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textFiltroEnsaio"
-        app:layout_constraintVertical_bias="0.428"
+
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/icon_filter" />
 
     <ImageButton
         android:id="@+id/imageView2"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:onClick="showPopup"
         android:layout_marginStart="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/textMeusProjetos"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textMeusProjetos"
-        app:srcCompat="@drawable/icon_folder" />
+        app:srcCompat="@drawable/icon_increase" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
