--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/toolbarHomeInclude"
-        layout="@layout/fragment_toolbar_home"
+        layout="@layout/toolbar_home"
         tools:layout_editor_absoluteX="-16dp"
         tools:layout_editor_absoluteY="-6dp" />
 
