--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,7 +21,7 @@
 
 
         <!-- Color de interação com butões -->
-        <item name="colorAccent">@color/color_primary_light</item>
+        <item name="colorAccent">@color/accent</item>
         <item name="colorSurface">@color/fundo_light</item>
         <item name="colorError">#B00020</item>
 
