Implementado datepicker no fragment CarimboEnsaioFragment e algumas mudanças na interface

--- a/app/src/main/res/layout/fragment_carimbo_projeto.xml
+++ b/app/src/main/res/layout/fragment_carimbo_projeto.xml
@@ -33,6 +33,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <EditText
+                    android:id="@+id/editTextDataInicioProjeto"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="8dp"
+                    android:ems="10"
+                    android:hint="@string/registration_Data_inicio_furo"
+                    android:inputType="date|datetime"
+                    android:minHeight="48dp"
+                    android:enabled="false"
+                    app:layout_constraintTop_toBottomOf="@id/calendarioDataInicio"
+                    app:layout_constraintStart_toEndOf="@id/guidelineStart"
+                    app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
+                    />
+                <ImageButton
+                    android:id="@+id/calendarioDataInicio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_date"
+                    app:layout_constraintTop_toBottomOf="@id/recyclerCarimboProjeto"
+                    app:layout_constraintStart_toEndOf="@id/guidelineStart"
+                    android:layout_margin="10dp"/>
                 <Button
                     android:id="@+id/buttonGetLocation"
                     android:layout_width="wrap_content"
@@ -42,7 +66,7 @@
                     android:text="@string/btn_capturar_endereco"
                     app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                     app:layout_constraintStart_toStartOf="@+id/recyclerCarimboProjeto"
-                    app:layout_constraintTop_toBottomOf="@+id/recyclerCarimboProjeto" />
+                    app:layout_constraintTop_toBottomOf="@+id/editTextDataInicioProjeto" />
 
                 <TextView
                     android:id="@+id/textWarning1"
