--- a/app/src/main/res/layout/fragment_carimbo_ensaio.xml
+++ b/app/src/main/res/layout/fragment_carimbo_ensaio.xml
@@ -32,16 +32,6 @@
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageButton
-                android:id="@+id/calendarioDataInicio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:src="@drawable/ic_calendar"
-                app:layout_constraintBottom_toTopOf="@+id/editTextStartDate"
-                app:layout_constraintStart_toEndOf="@id/textStartDate"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.5" />
 
             <EditText
                 android:id="@+id/editTextStartDate"
@@ -57,8 +47,15 @@
                 android:enabled="false"
                 app:layout_constraintEnd_toStartOf="@+id/guideline5"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
-                app:layout_constraintTop_toBottomOf="@+id/textStartDate" />
-
+                app:layout_constraintTop_toBottomOf="@+id/calendarioDataInicioFuro" />
+            <ImageButton
+                android:id="@+id/calendarioDataInicioFuro"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_date"
+                app:layout_constraintTop_toBottomOf="@id/textStartDate"
+                app:layout_constraintStart_toStartOf="@id/guideline4"
+                android:layout_margin="10dp"/>
             <TextView
                 android:id="@+id/textNivelFuro"
                 android:layout_width="wrap_content"
@@ -79,7 +76,6 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:hint="@string/registration_hint_nivel_furo"
-
                 android:ems="10"
                 android:inputType="numberDecimal"
                 android:minHeight="48dp"
